# islands-of-insight-tools

./: .gitignore  README.md  build-wasm.ps1  bunfig.toml  modules.d.ts  package.json  playwright.config.ts
.claude/: settings.local.json
.github/workflows/: deploy.yml  test.yml
e2e/: index.test.ts  phasicDialSolver.test.ts  rollingBlocksSolver.test.ts  shiftingMosaicSolver.test.ts
src/common/: common.css  common.ts
src/pages/: index.css  index.html  index.ts
src/pages/rolling-blocks-solver/a-star/: AStar.cpp  AStar.h  Block.cpp  Block.h  CMakeLists.txt  GoalCluster.h  Node.h  NodeKey.h  Types.h  main.cpp  wasm_bindings.cpp
src/pages/rolling-blocks-solver/a-star/test/: CMakeLists.txt  bfs_test.cpp  block_test.cpp
src/util/: build.ts  buildWasm.ts  plugins.ts  preload.ts  serve.ts  types.ts  utilMethods.ts
test/: phasicDialSolver.test.ts  rollingBlocksSolver.test.ts  solver.test.ts  utilMethods.test.ts
test/phasic-dial-solver/: phasicDialSolver.test.ts  turnSolver.test.ts
test/resources/: bfsTest.json  bfsTest1.json  bfsTest10.json  bfsTest11.json  bfsTest12.json  bfsTest13.json  bfsTest14.json  bfsTest15.json  bfsTest16.json  bfsTest17.json  bfsTest18.json  bfsTest19.json  bfsTest2.json  bfsTest20.json  bfsTest21.json  bfsTest22.json  bfsTest23.json  bfsTest24.json  bfsTest25.json  bfsTest26.json  bfsTest27.json  bfsTest28.json  bfsTest29.json  bfsTest3.json  bfsTest30.json  bfsTest31.json  bfsTest32.json  bfsTest33.json  bfsTest34.json  bfsTest35.json  bfsTest36.json  bfsTest37.json  bfsTest38.json  bfsTest39.json  bfsTest4.json  bfsTest5.json  bfsTest6.json  bfsTest7.json  bfsTest8.json  (+1 more)
(+35 files in other folders)
